# Discord-Translator

./: main.py  main.sh  pyproject.toml
